[gd_scene load_steps=15 format=3 uid="uid://dw8g5ywig87e6"]

[ext_resource type="PackedScene" uid="uid://b0vw4sftvguae" path="res://Scenes/Base Scenes/MainMenuScreenBase.tscn" id="1_1ce0y"]
[ext_resource type="FontFile" uid="uid://b2lwqd3u504hn" path="res://Assets/Fonts/BigSpace-rPKx.ttf" id="2_7n7s8"]
[ext_resource type="Script" uid="uid://j4i0ll28bv7s" path="res://Scripts/MainMenu/UpgradeScreen.gd" id="2_p8o5u"]
[ext_resource type="Texture2D" uid="uid://bq3oxv4yldnlf" path="res://Assets/Textures/MainMenu/X.png" id="3_8nnbs"]
[ext_resource type="PackedScene" uid="uid://c4skj15t6oxsa" path="res://Scenes/MainMenu/UpgradeButton.tscn" id="3_bokmq"]
[ext_resource type="Texture2D" uid="uid://bselagskc8btp" path="res://Assets/Textures/Card Game/EndTurnButton.png" id="4_0p8wr"]

[sub_resource type="LabelSettings" id="LabelSettings_bokmq"]
font = ExtResource("2_7n7s8")
font_size = 1250
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0p8wr"]
font = ExtResource("2_7n7s8")
font_size = 450
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8nnbs"]
font = ExtResource("2_7n7s8")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_31io4"]
font = ExtResource("2_7n7s8")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r52rg"]
font = ExtResource("2_7n7s8")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wj2iv"]
font = ExtResource("2_7n7s8")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_24sq4"]
font = ExtResource("2_7n7s8")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p8o5u"]
font = ExtResource("2_7n7s8")
font_size = 32
font_color = Color(0.25098, 0.729412, 0.454902, 1)

[node name="UpgradeScreen" instance=ExtResource("1_1ce0y")]
script = ExtResource("2_p8o5u")

[node name="ExitButton" parent="." index="1"]
texture_normal = ExtResource("3_8nnbs")

[node name="Label" type="Label" parent="." index="2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -199.007
offset_top = 24.4444
offset_right = 7663.99
offset_bottom = 1913.44
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 10000
text = "Upgrade List:"
label_settings = SubResource("LabelSettings_bokmq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalizeButton" type="TextureButton" parent="." index="3"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.3408
offset_top = -7.77777
offset_right = 62.6592
offset_bottom = 67.2222
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_0p8wr")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="FinalizeButton" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 8.0
offset_right = 2893.0
offset_bottom = 929.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "Finalize"
label_settings = SubResource("LabelSettings_0p8wr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="." index="4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -299.007
offset_top = -353.333
offset_right = 298.993
offset_bottom = -58.3333
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 125

[node name="UpgradesContainer" type="VBoxContainer" parent="HBoxContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="UpgradeButton" parent="HBoxContainer/UpgradesContainer" index="0" instance=ExtResource("3_bokmq")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
upgrade_amount = 1.0
crypto_needed = 1500

[node name="Label" parent="HBoxContainer/UpgradesContainer/UpgradeButton/VBoxContainer" index="0"]
label_settings = SubResource("LabelSettings_8nnbs")

[node name="UpgradeButton2" parent="HBoxContainer/UpgradesContainer" index="1" instance=ExtResource("3_bokmq")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
button_index = 1
crypto_needed = 1250

[node name="Label" parent="HBoxContainer/UpgradesContainer/UpgradeButton2/VBoxContainer" index="0"]
label_settings = SubResource("LabelSettings_31io4")

[node name="UpgradeButton3" parent="HBoxContainer/UpgradesContainer" index="2" instance=ExtResource("3_bokmq")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
button_index = 2
upgrade_amount = 0.2
crypto_needed = 750

[node name="Label" parent="HBoxContainer/UpgradesContainer/UpgradeButton3/VBoxContainer" index="0"]
label_settings = SubResource("LabelSettings_r52rg")

[node name="UpgradeButton4" parent="HBoxContainer/UpgradesContainer" index="3" instance=ExtResource("3_bokmq")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
button_index = 3
upgrade_amount = 0.025
crypto_needed = 2250

[node name="Label" parent="HBoxContainer/UpgradesContainer/UpgradeButton4/VBoxContainer" index="0"]
label_settings = SubResource("LabelSettings_wj2iv")

[node name="UpgradeButton5" parent="HBoxContainer/UpgradesContainer" index="4" instance=ExtResource("3_bokmq")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
button_index = 4
upgrade_amount = 5.0
crypto_needed = 1750

[node name="Label" parent="HBoxContainer/UpgradesContainer/UpgradeButton5/VBoxContainer" index="0"]
label_settings = SubResource("LabelSettings_24sq4")

[node name="CryptoHeldLabel" type="Label" parent="HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10000
text = "Crypto Held:
"
label_settings = SubResource("LabelSettings_p8o5u")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="FinalizeButton" to="." method="_on_finalize_button_pressed"]
[connection signal="degrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton" to="." method="_on_degrade_temp"]
[connection signal="upgrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton" to="." method="_on_upgrade_temp"]
[connection signal="degrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton2" to="." method="_on_degrade_temp"]
[connection signal="upgrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton2" to="." method="_on_upgrade_temp"]
[connection signal="degrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton3" to="." method="_on_degrade_temp"]
[connection signal="upgrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton3" to="." method="_on_upgrade_temp"]
[connection signal="degrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton4" to="." method="_on_degrade_temp"]
[connection signal="upgrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton4" to="." method="_on_upgrade_temp"]
[connection signal="degrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton5" to="." method="_on_degrade_temp"]
[connection signal="upgrade_temp" from="HBoxContainer/UpgradesContainer/UpgradeButton5" to="." method="_on_upgrade_temp"]

[editable path="HBoxContainer/UpgradesContainer/UpgradeButton"]
[editable path="HBoxContainer/UpgradesContainer/UpgradeButton2"]
[editable path="HBoxContainer/UpgradesContainer/UpgradeButton3"]
[editable path="HBoxContainer/UpgradesContainer/UpgradeButton4"]
[editable path="HBoxContainer/UpgradesContainer/UpgradeButton5"]
